style.css
/* entries*/
.no-feed-displayed{
  font-weight: lighter;
  font-size: large;
  padding:20px;
}
.entries {
  /*background-color: #ECECEC;*/
  background-color: #fff;
  color: #666;
}

.entries .is-read{
  background-color: #fdfdfd;
  /*font-style:italic;*/
  color: #999;
}

.entries .is-current{
  font-style:normal;
  background-color: #ffffff;
  box-shadow: 2px 2px 4px #666;
  color: #333;
}
.entries img {
  max-width: 100%;
}
.is-current > h2{
  text-shadow: 0 1px 2px #333;
}

.entry{
  border-top: 2px ridge;
  display:inline-block;
  padding-bottom: 10px;
  /*padding-left: 5px;*/
  width:100%;
  position:relative;
}

.entry h2{
  text-shadow: 0px 1px 1px #aaa;
}

.entry .author{
  font-size: .9em;
}
.entry .author:before{
  content:"by ";
}

.indicator{
  position:absolute;
  top: 10px;
  right: 20px;
}

/* i'd like to just make this all CSS
 * including backgroud spinner*/
/*
.is-loading:before{
  content:"loading..";
  color:white;
  background-color: #232323;
  color: rgba(200,200,200,.8);
  background-color:rgba(50,50,50, .8);
  padding: 5px;
  border-radius: 5px;
  position: absolute;
  top:50px;
  right: 30px;
}
*/

.ember-button{
  border-bottom: 1px dotted;
}

/* The Feed List
 */

#orbital-feedlist{
  overflow-y:auto;

  border-left: 1px solid #dddddd;
  padding-left: 10px;
  padding-right: 0px;
  background-color: #ECECEC;
  border-color: #CCCCCC;
  position: absolute;
  right: 0;
  /*min-width:100px;
  max-width:20%;*/
  width:20%
}
#orbital-feedlist {
  height:100%;
}
#feed-head > h2{
  display:inline;
}

#feed-head .action {
  font-size:1.5em;
  padding-left: 5px;
  padding-right: 5px;
  background: #dedede;
  box-shadow: 0 0 1px;
  border-radius: 5px;

}

#feeds {
  overflow-y:auto;
  margin:0px;
}

#orbital-feedlist ul li 
{
  border-bottom: 1px solid #DFDFDF;
  border-top: 1px solid #F9F9F9;
  margin-bottom: 0px; /*override something in main wp styles.*/
}
.tag ul>li {
  padding-left: 1em;
}
.feedcounter{
  font-size: xx-small;
  vertical-align: top;
}
.feedcounter:before{
  content: "(";
}
.feedcounter:after{
  content: ")";
}

.is-selected{
  text-shadow: 1px 1px 2px #666;
  box-shadow: 1px 1px 3px #666666 inset;
  background-color: #777777;
  background-image: -moz-linear-gradient(center bottom , #6D6D6D, #808080);
  color: #FFFFFF;
  text-shadow: 0 -1px 0 #333333;
}

.is-editable{
  background-color: white;
  box-shadow: 0 0 4px #353535;
}

#y-indicator{
  background-color: rgba(20,20,200, .5);
  height: 5px;
  width: 20px;
  position: absolute;
  left:-10px;
  top: 200px;
  border-radius: 0 50px 50px 0;
}



.modal-window{
  padding: 20px;
  color: #343434;
  text-shadow: 1px 1px 2px #ffffff;
  background-color: #efefef;
  background-color: rgba(250,250,250,.9);
 /* background-image: -moz-linear-gradient(center bottom, rgba(60, 60, 60, 0.7) , rgba(40, 40, 40, 0.6) 50px);*/
  position: fixed;
  top: 50px;
  left: 200px;
  border-radius: 20px;
  box-shadow: 2px 2px 8px #fff inset, 2px 2px 8px #000;
}
.invisible{
  display: none;
}
#opml-form{
  border-top: 1px dotted #000;
}
#orbital-content{
  position:absolute;
  width:80%;
 /* background:#dedede;*/
  overflow-y:auto;
  top: 20px;
}
/* Command Bar */
#commandbar {
  background: #dddddd;
  display: inline-block; 
  float:left;
  /*position: absolute;*/
  /*this is the height of the admin bar.*/
  width:100%;
  
  top: 28px;
}
#commandbar ul{
  display: inline; 

}
.action, .clickable{
  cursor: pointer;
  text-shadow: 0 0 3px #fff;
}
.dismiss{
  position: absolute;
  right: 10px;
  top: 10px;
}
#commandbar li:hover,
.feed:hover,
.tag div:hover,
.ember-button:hover
{
  cursor: pointer;
  text-shadow: 0 0 3px #fff;
  color: #D54E21;
  background: #E4E4E4;
}
#commandbar li{
  float: left;
  padding-left: 5px;
  padding-right: 5px;
}
.title {
  font-weight:strong;
  font-size:1.1em;

}

/*Subcriptions */

.horizontal-form label input{
  font-weight:normal;
}
.horizontal-form label{
  font-weight: bold;
  padding-top: 10px;
}

.horizontal-form label input{
  font-weight:normal;
}

.horizontal-form input {
   display: block;
   padding: 5px;
   width: 80%;
}
.horizontal-form input[type='checkbox']{
   display: inline-block;
   width:auto;
}
.horizontal-form input[type='button'] {
   display: inline;
   width:auto;
}
.tagselected {
  background:#F0F0B8;
}
.autocomplete > .suggestions {
  position: relative;
  bottom: 2px;
  left: 2px;
  background: white;
  border: 1px solid #808080;
  list-style: none outside none;
  margin: 0;
  padding: 2px;
  width: -moz-fit-content;
  width: -webkit-fit-content;
  width: fit-content;
  z-index:1000;
}

#tagentry{
  display:inline;
}
.heading {
  font-size: large;
}
/*hey it doesn't really work for this */
#wpfooter {
  display:none;
}
.update-nag {
  display:none;
}

#loadmoreajaxloader{
  display:block;
  border-radius:5px;
  color:white;
  text-shadow: 0 0 3px;
  padding: 10px;
  background: rgba(100,100,100,0.7);
  position:absolute;
  right:5px;
  top: 20px;
  float:right;
}

#feed-icon,
#opml-icon {
  width:14px;
}
#wpbody-content{
  padding-bottom:0px;
}

